linuxmuster-webui7 (1.0.63-1) UNRELEASED; urgency=medium 

  * Current snapshot build f0f8e984322d6c50018c40d4b8c8501f3680ff23
   *     build javascript

 -- Andreas Till <andreas.till@netzint.de> Sat Mar 23 16:25:36 UTC 2019

linuxmuster-webui7 (1.0.62-1) UNRELEASED; urgency=medium 

  * Current snapshot build 
   * 

 -- Andreas Till <andreas.till@netzint.de> Sat Mar 23 17:14:40 UTC 2019

linuxmuster-webui7 (1.0.61-1) UNRELEASED; urgency=medium 

  * Current snapshot build 
   * 

 -- Andreas Till <andreas.till@netzint.de> Sat Mar 23 14:32:40 UTC 2019

linuxmuster-webui7 (1.0.60-1) UNRELEASED; urgency=medium 

  * Current snapshot build 7414283f811e179fd265bc30ddc945d7a6148fdd
   *     possibly fixed print password bug in a clean way

 -- Andreas Till <andreas.till@netzint.de> Fri Mar 15 07:15:03 UTC 2019

linuxmuster-webui7 (1.0.59-1) UNRELEASED; urgency=medium 

  * Current snapshot build 500bda52f024f22c6399eb215c91015c8d665bf4
   *     quick fix: landingpage if no quota limitation is set

 -- Andreas Till <andreas.till@netzint.de> Tue Mar 12 07:54:03 UTC 2019

linuxmuster-webui7 (1.0.58-1) UNRELEASED; urgency=medium 

  * Current snapshot build 5ae8f7c8dbedd9874be8fb4a90ed8b42cb23ec05
   *     merged

 -- Andreas Till <andreas.till@netzint.de> Fri Mar  8 13:12:33 UTC 2019

linuxmuster-webui7 (1.0.57-1) UNRELEASED; urgency=medium 

  * Current snapshot build d8892290be9a7d0c715d81321989114548acff69
  * fixed print password empty pdf problem

 -- Andreas Till <andreas.till@netzint.de> Fri Mar  8 10:16:42 UTC 2019

linuxmuster-webui7 (1.0.56-1) UNRELEASED; urgency=medium 

  * Current snapshot build 

 -- Andreas Till <andreas.till@netzint.de> Wed Feb 20 12:17:31 UTC 2019

linuxmuster-webui7 (1.0.55-1) UNRELEASED; urgency=medium 

  * Current snapshot build 

 -- Andreas Till <andreas.till@netzint.de> Wed Feb 20 12:17:31 UTC 2019

linuxmuster-webui7 (1.0.54-1) UNRELEASED; urgency=medium 

  * Current snapshot build 
