@@ -1,4 +1,4 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.auth', ['core']);
 
@@ -14,7 +14,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   var isStrongPwd, validCharPwd;
 
