@@ -147,7 +147,7 @@ html body.customized .form-control:focus {
 p.dotlist:before {
   content: '';
   position: absolute;
-  bottom: 0.4rem;
+  bottom: .4rem;
   width: 100%;
   height: 0;
   line-height: 0;
