@@ -1,4 +1,4 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common', ['core', 'ajenti.ace', 'ajenti.filesystem']);
 
@@ -28,7 +28,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common').directive('lmLog', function($http, $interval, $timeout) {
     return {
@@ -76,7 +76,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common').directive('lmDragUpload', function($http, notify, messagebox, filesystem, gettext) {
     return {
@@ -187,7 +187,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common').service('lmFileEditor', function($uibModal) {
     this.show = function(path, encoding) {
@@ -260,7 +260,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common').service('lmFileBackups', function($uibModal) {
     this.show = function(path, encoding) {
