@@ -1,10 +1,10 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.devices', ['core', 'lm.common']);
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.devices').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/devices', {
