@@ -1,10 +1,10 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lmn.session', ['core', 'lm.common']);
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lmn.session').controller('LMNSessionFileSelectModalController', function($scope, $uibModalInstance, gettext, notify, $http, bulkMode, senders, receivers, action, command) {
     $scope.bulkMode = bulkMode;
