@@ -1,10 +1,10 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.settings', ['core', 'lm.common']);
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.settings').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/schoolsettings', {
