@@ -1,10 +1,10 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users', ['core', 'lm.common']);
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/students-list', {
@@ -140,7 +140,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/teachers', {
@@ -361,7 +361,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/students', {
@@ -581,7 +581,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/schooladmins', {
@@ -829,7 +829,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/globaladmins', {
@@ -1077,7 +1077,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/teachers-list', {
@@ -1215,7 +1215,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/extra-students', {
@@ -1306,7 +1306,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/extra-courses', {
@@ -1397,7 +1397,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/teachers', {
@@ -1618,7 +1618,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/print-passwords', {
@@ -1683,7 +1683,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').controller('LMUsersCheckResultsModalController', function($scope, $uibModalInstance, $uibModal, data) {
     $scope.data = data;
@@ -1760,7 +1760,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   var isStrongPwd1;
 
