@@ -1,10 +1,10 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.wdatetime', ['core', 'ajenti.dashboard']);
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.wdatetime').controller('lm.wdatetime', function($scope) {
     // $scope.widget is our widget descriptor here
